[gd_scene load_steps=2 format=3 uid="uid://vx4t4my8bpte"]

[ext_resource type="Script" path="res://lobby.gd" id="1_vlwds"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -54.0
offset_top = -117.0
offset_right = -54.0
offset_bottom = -117.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vlwds")

[node name="Players" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = -177.5
offset_right = 126.0
offset_bottom = 177.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Players"]
layout_mode = 0
offset_left = 25.0
offset_top = 19.5
offset_right = 166.0
offset_bottom = 45.5
text = "Awaiting Players..."

[node name="Start" type="Button" parent="Players"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -39.5
offset_right = 25.0
offset_bottom = -8.5
grow_horizontal = 2
grow_vertical = 0
text = "Start!"

[node name="List" type="ItemList" parent="Players"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -129.5
offset_right = 102.0
offset_bottom = 129.5
grow_horizontal = 2
grow_vertical = 2

[node name="Connect" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.5
offset_top = -83.5
offset_right = 138.5
offset_bottom = 83.5
grow_horizontal = 2
grow_vertical = 2

[node name="NameLabel" type="Label" parent="Connect"]
layout_mode = 0
offset_left = 25.5
offset_top = 10.5
offset_right = 76.5
offset_bottom = 36.5
text = "Name:"

[node name="Name" type="LineEdit" parent="Connect"]
layout_mode = 0
offset_left = 27.0
offset_top = 33.0
offset_right = 184.0
offset_bottom = 64.0
text = "Nagibator"

[node name="IPLabel" type="Label" parent="Connect"]
layout_mode = 0
offset_left = 28.5
offset_top = 67.5
offset_right = 68.5
offset_bottom = 93.5
text = "IP:"

[node name="IPAddress" type="LineEdit" parent="Connect"]
layout_mode = 0
offset_left = 29.0
offset_top = 90.0
offset_right = 181.0
offset_bottom = 121.0
text = "127.0.0.1"

[node name="Host" type="Button" parent="Connect"]
layout_mode = 0
offset_left = 601.5
offset_top = -245.5
offset_right = 645.5
offset_bottom = -214.5
text = "Host"

[node name="Join" type="Button" parent="Connect"]
layout_mode = 0
offset_left = 206.5
offset_top = 89.5
offset_right = 244.5
offset_bottom = 120.5
text = "Join"

[node name="Refresh" type="Button" parent="Connect"]
layout_mode = 0
offset_left = 526.5
offset_top = -280.5
offset_right = 645.5
offset_bottom = -249.5
text = "Refresh Lobby
"

[node name="ErrorLabel" type="Label" parent="Connect"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -35.0
offset_right = -15.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0

[node name="ErrorDialog" type="AcceptDialog" parent="."]

[connection signal="pressed" from="Players/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Connect/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Connect/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Connect/Refresh" to="." method="_on_refresh_pressed"]
